# trt_projects

./: .gitignore  CMakeLists.txt  Generate trt engine from onnx file by pure c.docx  README.md
FasterRCNN/: CMakeLists.txt  faster_rcnn.cpp  faster_rcnn.h  main.cpp  main_copy_0627.cpp  main_copy_0628.cpp  main_copy_0629.cpp
LGTPlugin/: CMakeLists.txt  checkMacrosPlugin.cpp
LGTPlugin/kernels/: FasterRCNNKernels.cu  FasterRCNNKernels.h
LGTPlugin/plugins/: DynamicDelta2BboxPlugin.cpp  DynamicDelta2BboxPlugin.h  DynamicPyramidROIAlignPlugin.cpp  DynamicPyramidROIAlignPlugin.h  DynamicSliceBackground.cpp  DynamicSliceBackground.h  DynamicSliceBackgroundPlugin.cpp  DynamicSliceBackgroundPlugin.h
MaskRCNN/: CMakeLists.txt  main.cpp  mask_rcnn.cpp  mask_rcnn.h
RetinaNet/: CMakeLists.txt  main.cpp  retinanet.cpp  retinanet.h
RetinaNet_quant/: CMakeLists.txt  main.cpp  retinanet.h  retinanet_int8.cpp
common/: buffers.h
docs/: tutorial  tutorial.md
onnx_graphsurgen/faster-rcnn/: faster_rcnn_onnx.py  to_trt.sh
onnx_graphsurgen/retinanet/: retinanet_onnx.py  to_trt.sh
utils/: calibrator.hpp  file_utils.h  post_process.h  pre_process.h  trt_utils.h
